[package]
name = "jtx"
version = "0.2.0"
authors = ["Logesh Kumar <logeshgcp@gmail.com>"]
edition = "2021"
description = "A simple JSON CLI tool"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/jtx"
keywords = ["json", "cli", "tool"]

[dependencies]
serde_json = "1.0"
serde_json_path = "0.6.7"
clap = { version = "3.1", features = ["derive", "env", "cargo"] }
